# dynamicalsystem

./: .gitignore  README.md  makefile  pyproject.toml
dynamicalsystem_halogen/: .dev.env  README.md  pyproject.toml
dynamicalsystem_halogen/src/dynamicalsystem/halogen/: config.py
dynamicalsystem_poohsticks/: README.md  pyproject.toml
dynamicalsystem_poohsticks/src/dynamicalsystem/poohsticks/: __init__.py  notion.py  publishers.py  review.py
dynamicalsystem_pytests/: README.md  pyproject.toml
dynamicalsystem_pytests/src/dynamicalsystem/pytests/: __init__.py  __main__.py  test_poohsticks_notion.py  test_poohsticks_publishers.py
