[project]
name = "dynamicalsystem"
version = "0.2.0"
description = "Add your description here"
authors = [
    { name = "Simon Horrobin", email = "simon@horrobin.net" }
]
dependencies = [
    "python-dotenv>=1.0.1",
    "atproto>=0.0.54",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.rye.workspace]
members = ["dynamicalsystem_*"]
