[project]
name = "dynamicalsystem-halogen"
version = "0.1.0"
description = "Utility functions and tools"
authors = [
    { name = "Simon Horrobin", email = "simon@horrobin.net" }
]
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
halogen = "dynamicalsystem.halogen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dynamicalsystem"]

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
h = { cmd = "python3 -m dynamicalsystem.halogen:main", env-file = "../.dev.env" }
