[project]
name = "dynamicalsystem-poohsticks"
version = "0.2.0"
description = "Add your description here"
authors = [
    { name = "Simon Horrobin", email = "simon@horrobin.net" }
]
dependencies = [
    "dynamicalsystem.halogen",
    "atproto>=0.0.54"
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
poohsticks = "dynamicalsystem.poohsticks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dynamicalsystem"]

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
p = { cmd = "python3 -m dynamicalsystem.poohsticks:main", env-file = "../.dev.env" }
