[project]
name = "dynamicalsystem-pytests"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Simon Horrobin", email = "simon@horrobin.net" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
tests = "dynamicalsystem.pytests:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dynamicalsystem"]
